objects/AMX_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>AMX_Team__c</fullName>
        <description>AMX Team that this member is a part of.</description>
        <label>Assignment Team</label>
        <referenceTo>AMX_Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>AMX_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether this AMX Team Member is active or not.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User Record for this AMX Team Member.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMX_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>